--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,13 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/vite": "^4.1.5",
     "antd": "^5.24.6",
+    "dayjs": "^1.11.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.1",
     "tailwindcss": "^4.1.5"
   },
